--- a/style.css
+++ b/style.css
@@ -81,6 +81,36 @@ img {
   }
   #lezioni .row {
     background-color: #F2F2CD;
+    padding-bottom: 20px;
+  }
+  #steps .row>.left,
+  #steps .row>.central,
+  #steps .row>.right {
+    width: 100%;
+  }
+  #why .row {
+    background-color: #F2F2CD;
+    padding-bottom: 20px;
+  }
+  .row {
+    margin-top: 0px;
+  }
+  * {
+    font-size: 27px;
+  }
+  h1 {
+    font-size: 50px;
+  }
+  #lezioni .row h1 {
+    margin-top: 0;
+  }
+  h3 {
+    font-size: 35px;
+    margin: 0 auto;
+  }
+  hr {
+    height: 1px;
+    border-top: 1px solid #000;
   }
 
 }
